TEMP: set spring.jpa.hibernate.ddl-auto=update for prod to auto-create schema (revert later)

--- a/demo/src/main/resources/application-prod.properties
+++ b/demo/src/main/resources/application-prod.properties
@@ -8,7 +8,9 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 
 # JPA settings for production
-spring.jpa.hibernate.ddl-auto=validate
+# NOTE: Temporary emergency setting to let Hibernate create missing tables on first startup.
+# Replace this with Flyway/Liquibase migrations and switch back to 'validate' for production.
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Let the platform assign the port; Render provides PORT environment variable mapped at startup
